# SkyLet

./: .flake8  Dockerfile  docker-compose.prod.yml  docker-compose.yml  mypy.ini  pyproject.toml
.github/workflows/: deploy.yml  lint.yml  lint_and_build.yml
app/: client.py  commands.py  main.py
app/cogs/: anti_spam.py  twitch.py
app/cogs/mute/: mute.py  mute_utils.py
app/cogs/twitch/: api.py  twitch.py
app/decorators/auth/: __init__.py  is_mod.py
app/models/: __init__.py  api_response.py  base.py  follower.py  game.py  gif.py  gif_formats.py  media.py  stream.py  stream_response.py  token.py  user.py
app/utils/: arguments_help.py  chttp.py  chttp_response.py  embeds.py  format_number.py  type_message.py
scripts/: dev-start.sh  start.sh
